# mcp-robinhood-researcher

./: .env.example  .gitignore  Dockerfile  README.md  auth.py  docker-compose.yml  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py
src/: auth.ts  index.ts  server.ts
src/api/: accounts.ts  client.ts  crypto.ts  markets.ts  options.ts  portfolio.ts  stocks.ts
src/tools/: accounts.ts  crypto.ts  index.ts  market.ts  portfolio.ts  reports.ts  research.ts
tools/: account.py  crypto.py  market.py  options.py  orders.py  portfolio.py  research.py
