[project]
name = "mcp-robinhood-researcher"
version = "2.0.0"
description = "MCP server for Robinhood portfolio research, powered by robin_stocks"
requires-python = ">=3.11"
dependencies = [
    "robin-stocks>=3.0.0",
    "pyotp>=2.9.0",
    "python-dotenv>=1.0.0",
    "mcp[cli]>=1.9.0",
    "uvicorn>=0.30.0",
    "requests>=2.31.0",
]

[project.scripts]
robinhood-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
